<resources>
    <string name="app_name">Glitter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="AppTitle">Glitter</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_label">Username or email</string>
    <string name="password_label">Password</string>
    <string name="remember_me_label">Remember me</string>
    <string name="signin_button_text">Sign In</string>
    <string name="new_user_button_text">I\'m New!</string>
    <string name="bad_credentials_text">We don\'t recognize your uername or password.</string>
    <string name="oops_text">Opps!</string>
    <string name="try_again_button">Try Again</string>
    <string name="cance_button">CANCEL</string>
    <string name="litter_button">LITTER</string>
    <string name="sign_in_title">Sign In to Litter</string>
</resources>
