<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.darrenpye.ui.LoginFragment"
    android:background="@android:color/transparent">

    <!-- TODO: Update blank fragment layout -->

    <Space
        android:layout_width="match_parent"
        android:layout_height="50px"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <Space
            android:layout_width="20px"
            android:layout_height="100px" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#80000000"
            android:padding="15pt">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/login_label"
                    android:id="@+id/textView" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/username" />
            </LinearLayout>

            <Space
                android:layout_width="20px"
                android:layout_height="40px" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/password_label"
                    android:id="@+id/textView2" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password" />

            </LinearLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me_label"
                android:id="@+id/rememberMe_cb" />

            <Space
                android:layout_width="20px"
                android:layout_height="80px" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signin_button_text"
                    android:id="@+id/sign_in_button"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:enabled="true" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user_button_text"
                    android:id="@+id/new_user"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:enabled="true" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
