<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.darrenpye.ui.BadCredentialsFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Space
            android:layout_width="20px"
            android:layout_height="30pt" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10pt"
            android:background="#80000000">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/oops_text"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10pt" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10pt">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:background="@drawable/sad_face" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bad_credentials_text"
                    android:id="@+id/textView3"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginLeft="5pt" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_again_button"
                android:id="@+id/try_again"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10pt" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
